[gd_scene load_steps=10 format=3 uid="uid://bpv4tlfrp7qlq"]

[ext_resource type="Texture2D" uid="uid://cop2aqtofyx4u" path="res://assets/UI/UI books & more.png" id="1_jdnjh"]
[ext_resource type="Script" path="res://Menus/options_menu.gd" id="2_y15oh"]
[ext_resource type="Script" path="res://Menus/audio_options.gd" id="3_mrgej"]
[ext_resource type="FontFile" uid="uid://c2c13h554bhsa" path="res://Menus/arquivos/fonte/DungeonFont.ttf" id="4_jwdtl"]
[ext_resource type="Texture2D" uid="uid://06lfygpflkg8" path="res://Menus/arquivos/botoes/botao3.png" id="5_02c32"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_blbxt"]
texture = ExtResource("1_jdnjh")
region_rect = Rect2(16, 32, 96, 48)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5eynb"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 7.0
texture = ExtResource("5_02c32")
region_rect = Rect2(137, 22, 302, 112)
modulate_color = Color(0.82891, 0.82891, 0.82891, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_klcrw"]
texture = ExtResource("5_02c32")
region_rect = Rect2(137, 163, 302, 112)
modulate_color = Color(0.820366, 0.820366, 0.820366, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_p1438"]
texture = ExtResource("5_02c32")
region_rect = Rect2(137, 22, 302, 112)

[node name="OptionsMenu" type="Panel"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -768.5
offset_top = -480.0
offset_right = 768.5
offset_bottom = 480.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_blbxt")
script = ExtResource("2_y15oh")

[node name="AudioOptions" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_mrgej")

[node name="VBoxContainer" type="VBoxContainer" parent="AudioOptions"]
layout_mode = 0
offset_left = 248.5
offset_top = 172.0
offset_right = 552.5
offset_bottom = 316.0
size_flags_vertical = 3

[node name="master" type="Label" parent="AudioOptions/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.227451, 0.211765, 0.211765, 1)
text = "Master"

[node name="HSlider" type="HSlider" parent="AudioOptions/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.05

[node name="SFX" type="Label" parent="AudioOptions/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.227451, 0.211765, 0.211765, 1)
text = "SFX
"

[node name="HSlider2" type="HSlider" parent="AudioOptions/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.05

[node name="music" type="Label" parent="AudioOptions/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.227451, 0.211765, 0.211765, 1)
text = "Music
"

[node name="HSlider3" type="HSlider" parent="AudioOptions/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.05

[node name="ok" type="Button" parent="AudioOptions"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 352.5
offset_top = 372.0
offset_right = 436.5
offset_bottom = 437.0
size_flags_vertical = 3
focus_mode = 0
theme_override_fonts/font = ExtResource("4_jwdtl")
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxTexture_5eynb")
theme_override_styles/pressed = SubResource("StyleBoxTexture_klcrw")
theme_override_styles/normal = SubResource("StyleBoxTexture_p1438")
text = "Ok"
icon_alignment = 1

[node name="Label" type="Label" parent="AudioOptions"]
layout_mode = 0
offset_left = 328.5
offset_top = 116.0
offset_right = 464.5
offset_bottom = 162.0
theme_override_colors/font_color = Color(0.227451, 0.211765, 0.211765, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 0.376471)
theme_override_font_sizes/font_size = 45
text = "Settings"

[connection signal="mouse_exited" from="AudioOptions/VBoxContainer/HSlider" to="AudioOptions" method="_on_h_slider_mouse_exited"]
[connection signal="mouse_exited" from="AudioOptions/VBoxContainer/HSlider2" to="AudioOptions" method="_on_h_slider_2_mouse_exited"]
[connection signal="mouse_exited" from="AudioOptions/VBoxContainer/HSlider3" to="AudioOptions" method="_on_h_slider_3_mouse_exited"]
[connection signal="pressed" from="AudioOptions/ok" to="." method="_on_ok_pressed"]
